# misconcept_platform

./: .editorconfig  .env copy.example  .env.example  .gitignore  .pre-commit-config.yaml  CHANGELOG.md  CLAUDE.md  DESIGN.md  FIX-001_COMPLETION_REPORT.md  FIX-001_WAVE3_QA_REPORT.md  README.md  backup_chatbot_config.sql  backup_chatbot_config_audit.sql  backup_scenario.sql  backup_scenario_20251117_190228.sql  complete_flow_test.py  dialogue_sim.db  dialogue_sim.db.backup_002_20251107_115540  dialogue_sim.db.backup_pre_fix_20251117_190216  dialogue_sim.db.backup_pre_migration_006  dialogue_sim.db.backup_pre_migration_007  dialogue_sim.db.backup_pre_migration_008  dialogue_sim.db.backup_pre_migration_010  main.py  pyproject.toml  simple_api_test.py  test_tutor_analysis.py
.claude/: settings.json
docs/: admin_chatbot_config_guide.md  analysis.txt  api_usage_schema_verification.md  debugging-chat-errors.md  deployment.md  developer_chatbot_config_guide.md  export_plan.md  flow.md  gpt-5-migration.md  gpt5-empty-response-fix.md  manual_testing_guide.md  prd.md  prompt.txt  rules.md  security.md  spec.md  tutor_threshold_slider_verification.md
logs/: environment_snapshot.txt
modify/: continue.txt  delete.md  phase_6_completion.md  phase_6_review.md  phase_7_completion.md  phase_7_review.md  plan.md
process/: continue.txt
scripts/: delete_all_scenarios.py  end_active_sessions.py  inspect_active_sessions.py  verify_design_tokens.py  verify_gpt5_access.py  verify_model_consistency.sh
src/: config.py  constants.py  main.py  version.py
tests/: conftest.py  (+11 more)
(+293 files in other folders)
